--- a/Leagues/index.html
+++ b/Leagues/index.html
@@ -25,7 +25,7 @@
   <script>
     const sheetId = "1D9wCL36JAbEUr9OaWpEXfe7lDtcLk4_FBsvXhBT_FGg";
     const apiKey = "AIzaSyBNh1WqteEDRI4smB9xNWgRceGjoDvXEN4";
-    const sheetName = "Sheet1!A1:G1200";
+    const sheetName = "Sheet1!A1:H1200";
 
     const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}?key=${apiKey}`;
 
