--- a/Leagues/index.html
+++ b/Leagues/index.html
@@ -65,7 +65,7 @@
     }
   </style>
 </head>
-<body>
+<body class="nis">
   <div class="nispanel">
     <h2 class="nispaneltitle">Leagues Tasks</h2>
     <h3 id="pointsTotal" class="nispanelsubtitle">Total Points: 0</h3>
