--- a/Leagues/index.html
+++ b/Leagues/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Leagues Tasks V1.0</title>
+  <title>Leagues Tasks V1.1</title>
   <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
   <style>
     body {
@@ -24,10 +24,14 @@
     }
     
     .nispanel {
-      flex: 1;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
+      height: 100vh; /* Full viewport height */
+      box-sizing: border-box;
+      padding: 20px;
+      background-color: #2b2b2b;
+      border: 1px solid #444;
+      border-radius: 6px;
     }
     
     #tableScroll {
@@ -82,9 +86,12 @@
       color: #888;
       font-style: italic;
     }
+    #header {
+      flex: 0 0 auto;
+    }
 
     #tableScroll {
-      max-height: 600px;
+      flex: 1 1 auto;
       overflow-y: auto;
       margin-top: 10px;
     }
